--- a/css/styles.css
+++ b/css/styles.css
@@ -97,19 +97,18 @@ section {
 }
 
 .navbar__menu .menu__link:hover {
-    background: #333;
-    color: #fff;
+    color: #000;
     transition: ease 0.3s all;
 }
 .navbar__menu .menu__link .your-active-class {
     background: #456;
-    color: #fff;
+    color: #333;
     transition: ease 0.3s all;
 }
 
 a.active {
     background: darkmagenta;
-    color: #fff;
+    color: #333;
     transition: ease 0.3s all;
 }
 
